- fixed layout to stretch to 100% height

--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,14 @@
+html {
+    height : 100%;
+}
 body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
+    height: 100%;
+    overflow: hidden
 }
+
 .wrapper {
     display: flex;
     flex-flow: column;
@@ -12,7 +18,6 @@ body {
 .header {
     text-align: center;
     background: #999999;
-    flex: 1;
 }
 .content {
     display: flex;
@@ -20,7 +25,7 @@ body {
 }
 .messageForm {
     display: flex;
-    flex: 1;
+
 
 }
 .userList {
